# rosgpt

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.arm  Dockerfile.pincherx  LICENSE  README.md  demo.sh  demo_arm.sh  docker-compose.yml  pincherx_demo.sh  pyproject.toml  requirements.txt  ros_entrypoint.sh  setup.py  workflow.md
src/arm_agent/: CMakeLists.txt  package.xml
src/arm_agent/launch/: agent.launch
src/arm_agent/scripts/: arm_agent.py  help.py  llm.py  prompts.py
src/arm_agent/scripts/tools/: arm.py
src/pincherx_agent/launch/: agent.launch
src/pincherx_agent/scripts/: help.py  pincherx_agent.py
src/pincherx_agent/scripts/tools/: pincherx.py  prompts.py
src/rosgpt/: __init__.py  prompts.py  rosgpt.py
src/rosgpt/tools/: __init__.py  calculation.py  log.py  ros1.py  ros2.py  system.py
src/turtle_agent/: CMakeLists.txt  package.xml  setup.py  turtle_agent.py
src/turtle_agent/launch/: agent.launch
src/turtle_agent/scripts/: help.py  llm.py  prompts.py  turte_agent.py  turtle_agent.py
src/turtle_agent/scripts/tools/: turtle.py
src/turtle_agent/turtle_agent/: help.py  turtle_agent.py
src/turtle_agent/turtle_agent/tools/: turtle.py
xsarm_python/: bar100.py  bartender.py  challenge001.py  colorSort.py  color_sort.py  joint_position_control.py  pick_place.py  pincherx_agent.py  px100-example.py
