[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosgpt"
version = "0.0.1"
description = "ROSGPT: the ROS Guide Powered by Transformers"
readme = "README.md"
authors = [{ name = "Glory Olusola", email = "olusolagloryolamide@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research/Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Robotics", "ROS", "Machine Learning", "Data Engineering", "Data Infrastructure", "LLM"]
requires-python = ">=3.8, <4"
dependencies = [
    "PyYAML==6.0.1",
    "python-dotenv>=1.0.1",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "pydantic",
    "pyinputplus",
    "cffi",
    "rich",
    "regex",
    "pillow>=10.4.0",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/uefroboticsclub/rosgpt"
"Bug Tracker" = "https://github.com/uefroboticsclub/rosgpt/issues"

[tool.setuptools.packages.find]
where = ["src"]
