<?xml version="1.0"?>
<package format="3"> 
    <name>turtle_agent</name>
    <version>0.0.1</version>
    <description>ROSGPT agent for the TurtleSim robot.</description>

    <maintainer email="olusolagloryolamide@gmail.com">goldenglorys</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_python</buildtool_depend> 

    <depend>rclpy</depend>  
    <depend>std_msgs</depend>     
    <depend>turtlesim</depend>     

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>