<package format="2">
    <name>turtle_agent</name>
    <version>0.0.1</version>
    <description>ROSGPT agent for the TurtleSim bot.</description>
    <maintainer email="olusolagloryolamide@gmail.com">Glory Olusola</maintainer>
    <license>Apache 2.0</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>std_srvs</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <export>
    </export>
</package>
